Changed photo view to no longer have the slate square background behind the picture. Also fixed it to scale correctly with two nested divs instead of relying on sm:. Changed PhotoTile and PhotoButton to support horizontal and vertical 4x6 images on 5x7 slate rectangles.

--- a/BlazorPersonalWebsite/wwwroot/css/tailwindcss/input.css
+++ b/BlazorPersonalWebsite/wwwroot/css/tailwindcss/input.css
@@ -14,6 +14,9 @@ TODO: Read more at https://tailwindcss.com/blog/tailwindcss-v4#css-first-configu
 @source inline("bg-{slate,gray,zinc,neutral,stone,red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-200");
 @source inline("text-{slate,gray,zinc,neutral,stone,red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-500");
 @source inline("my-{0,0.5,1,1.5,2,2.5,3,3.5,4,5,6,7,8,9,10}");
+@source inline("aspect-{5/7,7/5}");
+@source inline("w-{4/5,6/7}");
+@source inline("h-{4/5,6/7}");
 
 /* Fonts */
 /*
